Fix Reports IE9/8 No Table Scroll
More Noticable in IE9, but the Table wouldn't scroll and the columns
between the headings and table body weren't aligned on report.php.
Caused by bootstrap giving all <table>'s a max-width:100% IE9 doesn't
like this.. I'm not sure IE8 even knows what it is so its less effected.

--- a/admin/dynamic_admin/_css/styles.css
+++ b/admin/dynamic_admin/_css/styles.css
@@ -143,6 +143,9 @@ p.report-message {margin:10px;}
 /*For the DataTables*/
 .dataTables_wrapper {margin:10px 20px;}
 .dataTables_wrapper {min-height:0px !important} /*overide*/
+table{
+	max-width:none;
+}
 
 #page-header{min-height:70px}
 
